# clunk

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
.github/workflows/: cd.yaml
benchmarks/: CMakeLists.txt  orderbook_benchmarks.cpp
formula/: clunk.rb
include/clunk/: clunk.hpp  order_book.hpp  price_level.hpp
src/: benchmark.cpp  clunk.cpp  main.cpp
src/feed_handlers/: coinbase_handler.cpp  coinbase_handler.h  feed_handler.h
src/network/: websocket_client.cpp  websocket_client.h
src/orderbook/: order.cpp  order.h  order_book.cpp  order_book.h  price_level.cpp  price_level.h
src/visualization/: console_visualizer.cpp  console_visualizer.h
tests/: CMakeLists.txt  coinbase_test.cpp  orderbook_tests.cpp  test_clunk.cpp
